--- a/app/src/main/res/layout/room2.xml
+++ b/app/src/main/res/layout/room2.xml
@@ -23,7 +23,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9"></android.support.v4.view.ViewPager>
+        app:layout_constraintVertical_bias="0.9">
+    </android.support.v4.view.ViewPager>
 
 
     <ImageView
@@ -76,6 +77,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
+
+        <!--<LinearLayout
+            android:orientation="horizontal"
+            android:id="@+id/bottomnavparent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </LinearLayout>-->
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
